--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TourneysInfo.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TourneysInfo.fxml
@@ -9,97 +9,159 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane styleClass="StadiumStandBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.TourneysInfoController">
-   <StackPane AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
-      <ImageView fitHeight="450.0" fitWidth="700.0" preserveRatio="true" />
-      <StackPane maxHeight="200.0" maxWidth="600" AnchorPane.bottomAnchor="50" AnchorPane.leftAnchor="50" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="50">
-         <StackPane fx:id="ticketInferior" onMouseClicked="#slideBackTicket">
-            <ImageView fitHeight="415.0" fitWidth="600" preserveRatio="true" styleClass="BackTicket" />
-            <VBox alignment="CENTER" spacing="20" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
-               <padding>
-                  <Insets bottom="20" left="20" right="20" top="20" />
-               </padding>
-               <HBox alignment="CENTER" spacing="30">
-                  <VBox styleClass="StarIcon" stylesheets="@Style.css">
-                     <ImageView fitHeight="60" fitWidth="60" preserveRatio="true" styleClass="StarIcon" />
-                  </VBox>
-                  <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Ganador:" />
-                  <Label fx:id="lblWinner" styleClass="SmallLabel" stylesheets="@Style.css" text="Team" />
-                  <MFXButton fx:id="btnShowCertificate" onAction="#onActionBtnShowCertificate" stylesheets="@Style.css" text="Certificado">
-                     <graphic>
-                        <VBox styleClass="InteractiveVBox">
-                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true" styleClass="PrintIcon" />
-                        </VBox>
-                     </graphic>
-                  </MFXButton>
-               </HBox>
-               <HBox alignment="CENTER" spacing="30">
-                  <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true" styleClass="GameIcon">
-                        <VBox.margin>
-                           <Insets />
-                        </VBox.margin></ImageView>
-                  </VBox>
-                  <HBox prefHeight="25.0" prefWidth="30.0" />
-                  <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Equipos:" />
-                  <Label fx:id="lblTeams" styleClass="SmallLabel" stylesheets="@Style.css" text="Cantidad" />
-                  <HBox prefHeight="25.0" prefWidth="40.0" />
-               </HBox>
-               <HBox alignment="CENTER" spacing="30">
-                  <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="50" fitWidth="50" preserveRatio="true" styleClass="TrophyKeysIcon" />
-                  </VBox>
-                  <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Rounds:" />
-                  <Label fx:id="lblRounds" styleClass="SmallLabel" stylesheets="@Style.css" text="Cantidad" />
-                  <MFXButton fx:id="btnShowKeys" onAction="#onActionBtnShowKeys" styleClass="mfx-button" stylesheets="@Style.css" text="Ver Llaves">
-                     <graphic>
-                        <VBox styleClass="InteractiveVBox">
-                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true" styleClass="LookIcon" />
-                        </VBox>
-                     </graphic>
-                  </MFXButton>
-               </HBox>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="StadiumStandBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.TourneysInfoController">
+   <children>
+      <MFXButton fx:id="btnBack" layoutX="10.0" layoutY="10.0" onAction="#goBack" text="Volver">
+         <graphic>
+            <VBox prefHeight="30.0" prefWidth="30.0">
+               <children>
+                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" styleClass="LobbyIcon" />
+               </children>
             </VBox>
-         </StackPane>
-         <StackPane fx:id="ticketSuperior" onMouseClicked="#slideTicket">
-            <ImageView fitHeight="400" fitWidth="600.0" preserveRatio="true" styleClass="FrontTicket" />
-            <VBox alignment="CENTER" spacing="30" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
-               <padding>
-                  <Insets bottom="20" left="20" right="20" top="20" />
-               </padding>
-               <HBox alignment="CENTER">
-                  <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="100" fitWidth="100" preserveRatio="true" styleClass="TrophyIcon">
-                        <VBox.margin>
-                           <Insets right="10.0" top="20.0" />
-                        </VBox.margin></ImageView>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </VBox>
-                  <HBox prefHeight="100.0" prefWidth="60.0" />
-                  <VBox alignment="CENTER" spacing="15">
-                     <HBox alignment="CENTER" spacing="10">
-                        <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Nombre:" />
-                        <Label fx:id="lblTourney" styleClass="SmallLabel" stylesheets="@Style.css" text="TourneyName" />
-                     </HBox>
-                     <HBox alignment="CENTER" spacing="10">
-                        <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Estado:" />
-                        <Label fx:id="lblState" styleClass="SmallLabel" stylesheets="@Style.css" text="State" />
-                     </HBox>
-                  </VBox>
-                  <HBox prefHeight="100.0" prefWidth="120.0" />
-               </HBox>
-               <HBox alignment="CENTER" spacing="20">
-                  <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true" styleClass="ClockIcon" />
-                  </VBox>
-                  <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Minutes:" />
-                  <Label fx:id="lblTime" styleClass="SmallLabel" stylesheets="@Style.css" text="Time" />
-               </HBox>
-            </VBox>
-         </StackPane>
+         </graphic>
+      </MFXButton>
+      <StackPane layoutX="20.0" layoutY="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+         <children>
+            <StackPane maxHeight="200.0" maxWidth="600" AnchorPane.bottomAnchor="50" AnchorPane.leftAnchor="50" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="50">
+               <children>
+                  <StackPane fx:id="ticketInferior" onMouseClicked="#slideBackTicket">
+                     <children>
+                        <ImageView fitHeight="415.0" fitWidth="600" preserveRatio="true" styleClass="BackTicket" />
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="26.0">
+                                 <children>
+                                    <VBox alignment="CENTER" styleClass="StarIcon" stylesheets="@Style.css">
+                                       <children>
+                                          <ImageView fitHeight="60" fitWidth="60" preserveRatio="true" styleClass="StarIcon" />
+                                       </children>
+                                    </VBox>
+                                    <VBox alignment="CENTER" styleClass="InteractiveVBox" stylesheets="@Style.css">
+                                       <children>
+                                          <ImageView fitHeight="50" fitWidth="50" preserveRatio="true" styleClass="TrophyKeysIcon" />
+                                       </children>
+                                    </VBox>
+                                    <VBox alignment="CENTER" styleClass="InteractiveVBox" stylesheets="@Style.css">
+                                       <children>
+                                          <ImageView fitHeight="40" fitWidth="40" preserveRatio="true" styleClass="GameIcon">
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
+                                          </ImageView>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </VBox>
+                              <VBox alignment="CENTER_RIGHT" spacing="20" style="-fx-background-color: transparent;">
+                                 <padding>
+                                    <Insets bottom="20" left="20" right="20" top="20" />
+                                 </padding>
+                                 <children>
+                                    <HBox alignment="CENTER" spacing="30">
+                                       <children>
+                                          <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Ganador:" />
+                                          <Label fx:id="lblWinner" styleClass="SmallLabel" stylesheets="@Style.css" text="Team" />
+                                          <MFXButton fx:id="btnShowCertificate" onAction="#onActionBtnShowCertificate" stylesheets="@Style.css" text="Certificado">
+                                             <graphic>
+                                                <VBox styleClass="InteractiveVBox">
+                                                   <children>
+                                                      <ImageView fitHeight="30" fitWidth="30" preserveRatio="true" styleClass="PrintIcon" />
+                                                   </children>
+                                                </VBox>
+                                             </graphic>
+                                          </MFXButton>
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER" spacing="30">
+                                       <children>
+                                          <HBox prefHeight="25.0" prefWidth="30.0" />
+                                          <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Equipos:" />
+                                          <Label fx:id="lblTeams" styleClass="SmallLabel" stylesheets="@Style.css" text="Cantidad" />
+                                          <HBox prefHeight="25.0" prefWidth="40.0" />
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER" spacing="30">
+                                       <children>
+                                          <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Rounds:" />
+                                          <Label fx:id="lblRounds" styleClass="SmallLabel" stylesheets="@Style.css" text="Cantidad" />
+                                          <MFXButton fx:id="btnShowKeys" onAction="#onActionBtnShowKeys" styleClass="mfx-button" stylesheets="@Style.css" text="Ver Llaves">
+                                             <graphic>
+                                                <VBox styleClass="InteractiveVBox">
+                                                   <children>
+                                                      <ImageView fitHeight="30" fitWidth="30" preserveRatio="true" styleClass="LookIcon" />
+                                                   </children>
+                                                </VBox>
+                                             </graphic>
+                                          </MFXButton>
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </StackPane>
+                  <StackPane fx:id="ticketSuperior" onMouseClicked="#slideTicket">
+                     <children>
+                        <ImageView fitHeight="400" fitWidth="600.0" preserveRatio="true" styleClass="FrontTicket" />
+                        <VBox alignment="CENTER" spacing="30" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
+                           <padding>
+                              <Insets bottom="20" left="20" right="20" top="20" />
+                           </padding>
+                           <children>
+                              <HBox alignment="CENTER">
+                                 <children>
+                                    <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                       <children>
+                                          <ImageView fitHeight="100" fitWidth="100" preserveRatio="true" styleClass="TrophyIcon">
+                                             <VBox.margin>
+                                                <Insets right="10.0" top="20.0" />
+                                             </VBox.margin>
+                                          </ImageView>
+                                       </children>
+                                    </VBox>
+                                    <HBox prefHeight="100.0" prefWidth="60.0" />
+                                    <VBox alignment="CENTER" spacing="15">
+                                       <children>
+                                          <HBox alignment="CENTER" spacing="10">
+                                             <children>
+                                                <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Nombre:" />
+                                                <Label fx:id="lblTourney" styleClass="SmallLabel" stylesheets="@Style.css" text="TourneyName" />
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" spacing="10">
+                                             <children>
+                                                <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Estado:" />
+                                                <Label fx:id="lblState" styleClass="SmallLabel" stylesheets="@Style.css" text="State" />
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                    <HBox prefHeight="100.0" prefWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" spacing="20">
+                                 <children>
+                                    <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
+                                       <children>
+                                          <ImageView fitHeight="40" fitWidth="40" preserveRatio="true" styleClass="ClockIcon" />
+                                       </children>
+                                    </VBox>
+                                    <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Minutes:" />
+                                    <Label fx:id="lblTime" styleClass="SmallLabel" stylesheets="@Style.css" text="Time" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </StackPane>
+               </children>
+            </StackPane>
+         </children>
       </StackPane>
-   </StackPane>
-   <MFXButton fx:id="btnBack" layoutX="20.0" layoutY="549.0" onAction="#goBack" text="Volver" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="20.0" />
+   </children>
 </AnchorPane>
