--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/MatchTeams.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/MatchTeams.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="GameBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.MatchTeamsController">
+<AnchorPane id="AnchorPane" fx:id="ncpRoot" prefHeight="400.0" prefWidth="600.0" styleClass="GameBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.MatchTeamsController">
    <children>
       <VBox layoutX="221.0" layoutY="87.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
          <children>
@@ -45,29 +45,20 @@
                   </MFXButton>
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0">
-               <children>
-                  <MFXButton fx:id="btnCetificate" onAction="#onActionBtnCertificate" text="Imprimir Certificado" visible="false">
-                     <graphic>
-                        <VBox prefHeight="30.0" prefWidth="30.0">
-                           <children>
-                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" styleClass="PrintIcon" />
-                           </children>
-                        </VBox>
-                     </graphic>
-                  </MFXButton>
-               </children>
-            </HBox>
          </children>
       </VBox>
-      <StackPane fx:id="stpWinnerTourney" prefHeight="150.0" prefWidth="200.0" visible="false" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="20.0">
+      <StackPane fx:id="stpWinnerTourney" prefHeight="150.0" prefWidth="200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fx:id="mgvWinnerStar" fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" styleClass="StarIcon" translateX="-30.0" translateY="-30.0" StackPane.alignment="CENTER" />
             <StackPane prefHeight="150.0" prefWidth="200.0">
                <children>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <Label fx:id="lblWinnerName" styleClass="LargeLabel" stylesheets="@Style.css" text="Winner" />
+                        <VBox prefHeight="101.0" prefWidth="430.0" VBox.vgrow="ALWAYS" />
+                        <Label fx:id="lblWinnerName" styleClass="LargeLabel" stylesheets="@Style.css" text="Winner">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin></Label>
                         <ImageView fx:id="mgvWinnerImage" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                         <Label fx:id="lblWinnerPoints" stylesheets="@Style.css" text="Points">
                            <styleClass>
@@ -81,6 +72,22 @@
                               <String fx:value="boxRose" />
                            </styleClass>
                         </Label>
+                        <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <MFXButton fx:id="btnCetificate" onAction="#onActionBtnCertificate" text="Imprimir Certificado">
+                                 <graphic>
+                                    <VBox prefHeight="30.0" prefWidth="30.0">
+                                       <children>
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" styleClass="PrintIcon" />
+                                       </children>
+                                    </VBox>
+                                 </graphic>
+                              </MFXButton>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="70.0" />
+                           </VBox.margin>
+                        </HBox>
                      </children>
                   </VBox>
                </children>
