--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/MatchTeams.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/MatchTeams.fxml
@@ -16,8 +16,9 @@
    <children>
       <VBox layoutX="221.0" layoutY="87.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
          <children>
-            <TableView fx:id="tblPlayersTable" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.75" prefHeight="372.0" prefWidth="571.0" styleClass="TableViewLightdBlue" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
+            <TableView id="#tblPayersTable" fx:id="tblPlayersTable" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.75" prefHeight="372.0" prefWidth="571.0" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
                <columns>
+                  <TableColumn fx:id="clmnOrganized" text="Organized" visible="false" />
                   <TableColumn fx:id="clmnRound1" maxWidth="1.0E22" text="Round 1" />
                   <TableColumn fx:id="clmnRound2" maxWidth="1.0E22" text="Round 2" />
                   <TableColumn fx:id="clmnRound3" maxWidth="1.0E22" text="Round 3" />
@@ -29,6 +30,10 @@
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
+               <styleClass>
+                  <String fx:value="TableViewLightdBlue" />
+                  <String fx:value="TableViewTransparent" />
+               </styleClass>
             </TableView>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="NEVER">
                <children>
