--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TeamsHistory.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TeamsHistory.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -64,9 +65,12 @@
                                                                 <Insets left="10.0" right="10.0" />
                                                             </padding>
                                                         </TableView>
-                                                        <MFXButton fx:id="btnBackMenu" onAction="#onActionBtnBackMenu" text="Volver al menú">
+                                                        <MFXButton fx:id="btnBackMenu" minHeight="-Infinity" onAction="#onActionBtnBackMenu" prefHeight="35.0" text="Volver al menú">
                                                             <graphic>
-                                                                <VBox id="LobbyIcon" prefHeight="30.0" prefWidth="30.0" styleClass="LobbyIcon" stylesheets="@Style.css" />
+                                                                <VBox prefHeight="30.0" prefWidth="30.0" stylesheets="@Style.css">
+                                                   <children>
+                                                      <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" styleClass="LobbyIcon" />
+                                                   </children></VBox>
                                                             </graphic>
                                                         </MFXButton>
                                                     </children>
